# personal-agent

./: .env.example  .gitignore  README.md  debug_cli.py  pyproject.toml
docs/superpowers/plans/: 2026-06-05-mvp-implementation.md
docs/superpowers/specs/: 2026-06-05-personal-agent-design.md  2026-06-25-v0.2.0-multimodal-agent-design.md
src/actions/: __init__.py  mapper.py  registry.py  schema.py
src/agents/: base.py  config.py
src/agents/prompts/: defaults.py
src/api/: app.py
src/api/routes/: tasks.py  ws.py
src/cli/: main.py
src/config/: settings.py
src/engine/: graph.py  state.py
src/engine/nodes/: executor.py  fanout.py  planner.py  reviewer.py  router.py
src/events/: __init__.py  bus.py  models.py
src/llm/: __init__.py  base.py  deepseek.py  factory.py  qwen_vl.py
src/memory/: __init__.py  context_manager.py  models.py
src/storage/: database.py  models.py
src/tools/: file_ops.py  registry.py  sandbox.py  web_search.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_agents.py  test_cli.py  test_file_ops.py  test_graph.py  test_llm_provider.py  test_planner.py  test_reviewer.py  test_router_executor.py  test_sandbox.py  test_storage.py  test_tool_registry.py  test_web_search.py
web/: app.py
